# Feedback_spinal_cord

./: .gitattributes  .gitignore  .gitmodules  README.md  pyproject.toml
configs/: default.json
scripts/: run_gui.py
src/gait_stim/core/: bootstrap.py  bus.py  config.py  pipeline.py  plugin.py  types.py
src/gait_stim/gui/: app.py  controls.py  state.py  stim_view.py  video_view.py
src/gait_stim/modules/DLC/: .gitignore  config.yaml
src/gait_stim/modules/DLC/dlc-models/iteration-0/r_tm_sideOct25-trainset95shuffle2/test/: pose_cfg.yaml
src/gait_stim/modules/DLC/dlc-models/iteration-0/r_tm_sideOct25-trainset95shuffle2/train/: checkpoint  pose_cfg.yaml  snapshot-500000.data-00000-of-00001  snapshot-500000.index
src/gait_stim/modules/asymmetry/: base.py  manual_psi.py
src/gait_stim/modules/controller/: base.py  rule_based.py
src/gait_stim/modules/emg/: base.py  mock_emg.py
src/gait_stim/modules/imu/: mock_imu.py
src/gait_stim/modules/kinematics/: base.py  simple_kin.py
src/gait_stim/modules/pose/: base.py  dlc_stub.py  yolo_stub.py
src/gait_stim/modules/stim/: base.py  mock_stim.py  waveforms.py
src/gait_stim/modules/video/: opencv_dual_source.py  opencv_source.py
